--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 html {
   font-family: sans-serif;
-  font-size: 1rem;
-  color: #222;
+  font-size: 14px;
+  /*   color: #222; */
 }
 
 body {
@@ -30,12 +30,17 @@ th {
 }
 
 table thead {
-  color: #444;
+  /* color: #444; */
   background-color: #e3eef2;
+  font-weight: normal;
+}
+
+table thead th {
+  font-weight: normal;
 }
 
 th:not(:first-child) {
-  min-width: 100px;
+  min-width: 70px;
 }
 
 tbody tr:hover td:first-child {
@@ -45,4 +50,9 @@ tbody tr:hover td:first-child {
 tr td:first-child {
   text-align: center;
   background-color: #e3eef2;
+}
+
+.activeCell,
+.activeTitle {
+  box-shadow: 0 0 0 1px #444 inset;
 }
