--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,20 @@ tr td:first-child {
   border: none;
   height: 20px;
 }
+
+#column-search {
+  width: 10%;
+  text-align: center;
+}
+
+#mirror {
+  width: 90%;
+}
+
+.input-group {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #8a8d8e;
+  border-top: 1px solid #8a8d8e;
+  background-color: #e3eef2;
+}
