--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ tr td:first-child {
   text-align: center;
 }
 
+#column-search:focus {
+  text-align: left;
+}
+
 #mirror {
   width: 90%;
 }
@@ -76,4 +80,10 @@ tr td:first-child {
   border-bottom: 1px solid #8a8d8e;
   border-top: 1px solid #8a8d8e;
   background-color: #e3eef2;
+}
+
+.input-group input {
+  padding-left: 5px;
+  padding-right: 5px;
+  outline: none;
 }
