--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,17 @@ th {
   border: 1px solid #ccc;
 }
 
-td:not(:first-child),
 th:not(:first-child) {
-  /* width: 70px; */
-  min-width: 70px;
   height: 23px;
-  min-height: 23px;
-  max-height: 23px;
+  overflow: hidden;
+}
+
+td:not(:first-child) {
+  min-width: 70px;
   max-width: 70px;
+  height: 23px;
   white-space: nowrap;
   overflow: hidden;
-  /* padding-left: 3px; */
 }
 
 table thead {
@@ -63,7 +63,7 @@ tr td:first-child {
   border: none;
   height: 20px;
   outline: none;
-  padding-left: 3px;
+  /* padding-left: 3px; */
 }
 
 #column-search {
@@ -89,6 +89,7 @@ tr td:first-child {
   border-bottom: 1px solid #8a8d8e;
   border-top: 1px solid #8a8d8e;
   background-color: #e3eef2;
+  z-index: 1;
 }
 
 .input-group input {
